--- a/blocklayered.css
+++ b/blocklayered.css
@@ -1,183 +1,97 @@
-/**
- * Copyright (C) 2017-2024 thirty bees
- * Copyright (C) 2007-2016 PrestaShop SA
- *
- * thirty bees is an extension to the PrestaShop software by PrestaShop SA.
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE.md.
- * It is also available through the world-wide-web at this URL:
- * https://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@thirtybees.com so we can send you a copy immediately.
- *
- * @author    thirty bees <modules@thirtybees.com>
- * @author    PrestaShop SA <contact@prestashop.com>
- * @copyright 2017-2024 thirty bees
- * @copyright 2007-2016 PrestaShop SA
- * @license   Academic Free License (AFL 3.0)
- * PrestaShop is an internationally registered trademark of PrestaShop SA.
- */
+@charset "UTF-8";
 
-#layered_block_left div.block_content {
-	padding: 6px;
+/* used bootstrap 5 CSS */
+
+.range-slider {
+  --cz-range-slider-height: 0.125rem;
+  --cz-range-slider-bg: var(--cz-border-color);
+  --cz-range-slider-connect-bg: var(--cz-emphasis-color);
+  --cz-range-slider-handle-size: 0.8125rem;
+  --cz-range-slider-handle-bg: var(--cz-body-bg);
+  --cz-range-slider-handle-active-bg: var(--cz-emphasis-color);
+  --cz-range-slider-handle-border-width: 2px;
+  --cz-range-slider-handle-border-color: var(--cz-emphasis-color);
+  --cz-range-slider-handle-border-radius: 50%;
+  --cz-range-slider-pips-color: var(--cz-body-color);
+  --cz-range-slider-pips-font-size: 0.75rem;
+  --cz-range-slider-pips-border-width: var(--cz-border-width);
+  --cz-range-slider-pips-border-color: rgb(205.4, 213.4, 223);
+  --cz-range-slider-tooltip-padding-y: 0.375rem;
+  --cz-range-slider-tooltip-padding-x: 0.625rem;
+  --cz-range-slider-tooltip-bg: transparent;
+  --cz-range-slider-tooltip-color: var(--cz-emphasis-color);
+  --cz-range-slider-tooltip-font-size: 0.75rem;
+  --cz-range-slider-tooltip-border-radius: var(--cz-border-radius-sm);
 }
 
-#layered_block_left ul {
-	padding-left: 0;
-	max-height: 120px;
-	overflow-y: auto;
-	overflow-x: hidden;
-	padding-left: 1px;
-	padding-right: 1px;
+.range-slider-ui {
+  height: var(--cz-range-slider-height);
+  margin: 0;
+  margin-top: 2.25rem;
+  margin-right: 0;
+  margin-bottom: 1.75rem;
+  margin-left: 0;
+  background-color: var(--cz-range-slider-bg);
+  border: 0;
+  box-shadow: none;
+}
+.range-slider-ui .noUi-connect {
+  background-color: var(--cz-range-slider-connect-bg);
+}
+.range-slider-ui .noUi-handle {
+  top: 50%;
+  width: var(--cz-range-slider-handle-size);
+  height: var(--cz-range-slider-handle-size);
+  margin-top: calc(var(--cz-range-slider-handle-size) * -0.5);
+  background-color: var(--cz-range-slider-handle-bg);
+  border: var(--cz-range-slider-handle-border-width) solid var(--cz-range-slider-handle-border-color);
+  border-radius: var(--cz-range-slider-handle-border-radius);
+  box-shadow: none;
+}
+.range-slider-ui .noUi-handle::before, .range-slider-ui .noUi-handle::after {
+  display: none;
+}
+.range-slider-ui .noUi-handle:active, .range-slider-ui .noUi-handle:focus-visible {
+  background-color: var(--cz-range-slider-handle-active-bg);
+}
+.range-slider-ui .noUi-handle:focus {
+  outline: none;
+}
+.range-slider-ui .noUi-handle:focus-visible {
+  box-shadow: 0 0 0 0.25rem var(--cz-focus-ring-color);
+}
+.range-slider-ui .noUi-marker-normal {
+  display: none;
+}
+.range-slider-ui .noUi-marker-horizontal.noUi-marker {
+  width: var(--cz-range-slider-pips-border-width);
+  background-color: var(--cz-range-slider-pips-border-color);
+}
+.range-slider-ui .noUi-marker-horizontal.noUi-marker-large {
+  height: 0.75rem;
+}
+.range-slider-ui .noUi-value {
+  padding-top: 0.125rem;
+  font-size: var(--cz-range-slider-pips-font-size);
+  color: var(--cz-range-slider-pips-color);
+}
+.range-slider-ui .noUi-tooltip {
+  padding: var(--cz-range-slider-tooltip-padding-y) var(--cz-range-slider-tooltip-padding-x);
+  line-height: 1.2;
+  font-size: var(--cz-range-slider-tooltip-font-size);
+  font-weight: 500;
+  color: var(--cz-range-slider-tooltip-color);
+  background-color: var(--cz-range-slider-tooltip-bg);
+  border: 0;
+  border-radius: var(--cz-range-slider-tooltip-border-radius);
 }
 
-#layered_form > div > div {
-	border-bottom: 1px dotted #CCCCCC;
-	padding-bottom: 5px;
-	margin-bottom: 5px;
+html:not([dir=rtl]) .range-slider-ui.noUi-horizontal .noUi-handle {
+  right: calc(var(--cz-range-slider-handle-size) * -0.5);
 }
 
-#layered_block_left .hide-action {
-	display: block;
-	text-align: right;
-	padding-right: 5px;
-}
-#layered_block_left .hide-action:hover {
-	text-decoration: underline;
-}
-
-#layered_block_left ul li {
-	margin-left: 15px;
-	padding-left: 2px;
-	list-style-type: none;
-}
-
-#layered_block_left #enabled_filters , #layered_url_filter_block {
-	font-size: 10px;
-	padding-bottom: 5px;
-}
-
-#layered_block_left #enabled_filters ul li {
-	margin-left: 0;
-	padding-left: 0;
-}
-
-
-/* Style moved form the template to the css  */
-#layered_block_left #enabled_filters ul li:hover {
-	background: inherit;
-	color: inherit;
-}
-
-#layered_block_left #enabled_filters a {
-	text-decoration: none;
-	color: red;
-}
-
-#layered_block_left ul li:hover {
-	background: #71BF47;
-	color: #FFF;
-}
-
-#layered_block_left ul li label {
-	cursor: pointer;
-}
-
-#layered_block_left ul li.nomargin {
-	margin-left: 0;
-}
-
-#layered_block_left span.layered_subtitle {
-	float: left;
-	font-weight: bold;
-	font-size: 12px;
-	display: block;
-	margin-bottom: 4px;
-}
-
-#layered_block_left span.layered_close a { text-decoration: none; }
-
-#layered_block_left span.layered_close {
-	float: right;
-	font-weight: bold;
-	font-size: 12px;
-	display: block;
-	margin-bottom: 4px;
-}
-
-#layered_block_left ul li input.checkbox {
-	vertical-align: middle;
-	margin-left: 2px;
-}
-
-#layered_block_left ul li .disabled {
-	color: #666;
-}
-#product_list .warning {
-	margin-top: 13px;
-}
-
-#layered_form .select {
-	width: 165px;
-}
-#layered_form .color-option {
-	margin-left: 0;
-	width: 16px;
-	height: 16px;
-	padding:0;
-	border: 1px solid #666;
-}
-#layered_block_left .color-option.disable {
-	opacity: 0.5;
-	filter:alpha(opacity=50);
-	-moz-opacity:0.5;
-}
-#layered_form  .color-option.on {
-	border: 1px solid red;
-}
-#layered_form input[type=radio] {
-	margin-left: 2px;
-	vertical-align: middle;
-}
-.layered_price_range {
-	margin-left: 7px;
-}
-.layered_price_range_unit {
-	margin-right: 7px;
-}
-.layered_slider_container {
-	margin: 6px 0 6px 6px; width: 93%;
-}
-.layered_slider {
-	margin-top:5px;
-}
-.layered_input_range_min {
-	width:30px;
-}
-.layered_input_range_max {
-	width:40px;
-}
-.layered_list_selected {
-	font-weight: bold;
-}
-.layered_ajax_loader p {
-	margin: 20px 0;
-	text-align: center;
-}
-.hide-action {
-	text-align: center;
-	text-align: right;
-	display: block;
-	cursor: pointer;
-}
-.hide-action:hover {
-	font-weight: bold;
-}
-#layered_form div div ul {
-	max-height: 200px;
-	overflow-x: auto;
+.noUi-txt-dir-rtl.noUi-horizontal .noUi-handle {
+  /* rtl:begin:ignore */
+  left: -0.5rem;
+  /* rtl:end:ignore */
 }
